--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "node-hapijs",
   "version": "1.0.0",
   "description": "an introduction to hapiJS",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "nodemon --watch server/server.js --watch public/index.html"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/Noblemajesty/Node-HapiJS#readme",
   "dependencies": {
-    "hapi": "^17.5.1"
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
+    "hapi": "^17.5.1",
+    "inert": "^5.1.0"
+  },
+  "devDependencies": {
+    "hapi-pino": "^4.0.4",
+    "nodemon": "^1.17.5"
   }
 }
